ProdIND/ProdPrograms/force-app/main/default/objects/MD_ErrorMappingConfig__mdt/MD_ErrorMappingConfig__mdt.object-meta.xml
<CustomObject>
    <label>MD_ErrorMappingConfig</label>
    <pluralLabel>ErrorMappingConfig</pluralLabel>
</CustomObject>