ProdIND/ProdPrograms/force-app/main/default/objects/MD_ErrorMappingConfig__mdt/fields/Display_Text__c.field-meta.xml
<CustomField>
    <fullName>Display_Text__c</fullName>
    <label>Display Text</label>
    <type>TextArea</type>
</CustomField>