ProdIND/ProdPrograms/force-app/main/default/objects/MD_ErrorMappingConfig__mdt/fields/Error_Text__c.field-meta.xml
<CustomField>
    <fullName>Error_Text__c</fullName>
    <label>Error Text</label>
    <type>TextArea</type>
</CustomField>