ProdIND/ProdPrograms/force-app/main/default/objects/MD_ErrorMappingConfig__mdt/fields/Error_Type__c.field-meta.xml
<CustomField>
    <fullName>Error_Type__c</fullName>
    <label>Error Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>